--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,16 @@
 <h1> Showing selected Article </h1>
 
 <p>
+  <%= link_to 'Edit this article', edit_article_path(@article) %>
+</p>
+<p>
   Title: <%= @article.title %>
 </p>
 
 <p>
   Description: <%= @article .description %>
 </p>
+
+
+
+<%= link_to "Back to article listing", articles_path %>
