--- a/app/views/blog/home.html.erb
+++ b/app/views/blog/home.html.erb
@@ -1,3 +1,3 @@
 <h1> Blog home page </h1>
 
-<%= link_to "Alpha Blog", articles_path %> <%= link_to 'About', about_path %>
+<%= link_to "Alpha Blog", articles_path, class: "links" %> <%= link_to 'About', about_path %>
