Create homepage and add link

--- a/app/views/blog/home.html.erb
+++ b/app/views/blog/home.html.erb
@@ -1,3 +1,5 @@
-<h1> Blog home page </h1>
 
-<%= link_to "Alpha Blog", articles_path, class: "links" %> <%= link_to 'About', about_path %>
+<div class="center jumbotron">
+  <h1>Alpha Blog</h1>
+  <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
