--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,76 @@
-@import "bootstrap-sprockets";
+$navbar-default-bg: #cee5e5;
+
 @import "bootstrap";
+@import "bootstrap-sprockets";
+
+
+body {
+  font-family: 'Lato';
+}
+.navbar {
+  border-radius: 0;
+}
+
+#logo {
+  float:left;
+  font-size: 1.7em;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+  &:hover {
+    color:#444;
+  }
+}
+
+.center {
+  text-align:center;
+}
+
+.jumbotron {
+  background-image: asset-url("littlehouse.jpg");
+  background-size:cover;
+  height:450px;
+}
+
+.jumbotron h1 {
+  color: #fefefe;
+  text-shadow: 1px 1px 2px #444;
+  text-align:center;
+  margin-bottom:30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.btn-xlarge {
+  font-size: 1.8em;
+  background-color: #555;
+  border-color: #444;
+  &:hover {
+    background-color: #777;
+    border-color: #555;
+  }
+}
+
+footer {
+  margin-top: 54px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+footer a:hover {
+  color :#222;
+}
+
+footer small {
+  float:left;
+}
+
+footer ul {
+  float:right;
+  list-style:none;
+}
+
+footer ul li {
+  float:left;
+  margin-left:15px;
+}
