--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,5 @@
 $navbar-default-bg: #cee5e5;
+$border-top-default: 1px solid #eaeaea;
 
 @import "bootstrap";
 @import "bootstrap-sprockets";
@@ -51,20 +52,34 @@ body {
   }
 }
 
+.lg-bg {
+  background-color: #eee;
+}
 
 .article-actions {
-  border-top: 1px solid #eaeaea;
+  border-top: $border-top-default;
   padding-top: 5px;
+  text-align:right;
 }
 
 .description {
   margin-top: 0;
 }
+.article-title {
+  font-weight:bold;
+  font-size:1.5em;
+}
+
+.article-body {
+//  border-top: $border-top-default;
+padding-top: 15px;
+padding-bottom: 15px;
+}
 
 footer {
   margin-top: 54px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
+  border-top: $border-top-default;
   color: #777;
 }
 footer a:hover {
