Create show action and add gravatar image

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,6 +56,10 @@ body {
   background-color: #eee;
 }
 
+.gravatar {
+  border: 2px solid #888;
+}
+
 .article-meta-details {
   border-top: $border-top-default;
   margin-top: 15px;
