--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -85,6 +85,14 @@ padding-top: 15px;
 padding-bottom: 15px;
 }
 
+.listing {
+  list-style:none;
+  padding-left:0;
+  li {
+  text-align:center;
+  }
+}
+
 footer {
   margin-top: 54px;
   padding-top: 5px;
