--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1 align="center"> All Alpha bloggers </h1>
-
+<div align="center">
+	<%= will_paginate %>
+</div>
 <% @users.each do |user| %>
 	<ul class="listing">
 		<div class="row">
@@ -13,3 +15,6 @@
 		</div>
 	</ul>
 <% end %>
+<div align="center">
+	<%= will_paginate %>
+</div>
