--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,8 +1,9 @@
 <% obj.each do |article| %>
     <div class="row">
       <div class="col-xs-8 col-xs-offset-2">
-        <div class="list-group">
-          <div class="list-group-item lg-bg">
+        <ul class="listing">
+
+          <li class="well well-lg lg-bg">
             <div class="article-title">
               <%= link_to article.title, article_path(article) %>
             </div>
@@ -24,8 +25,8 @@
                                 class: "btn btn-xs btn-danger" %>
               </div>
             <% end %>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </div>
-  <% end %>
+<% end %>
