--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,7 @@
 <h2 align="center"> Title: <%= @article.title %></h2>
 <div class="well col-xs-8 col-xs-offset-2">
   <% if @article.user %>
+    <div class="center">
     <ul class="listing">
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
@@ -14,6 +15,7 @@
         </div>
       </div>
     </ul>
+    </div>
   <% end %>
 
   <h4 class="center description"><strong>Description:</strong></h4>
