--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,7 @@
 	<%= will_paginate %>
 </div>
 <% @users.each do |user| %>
+	<div class="center">
 	<ul class="listing">
 		<div class="row">
 			<div class="well col-md-4 col-md-offset-4">
@@ -14,6 +15,7 @@
 			</div>
 		</div>
 	</ul>
+	</div>
 <% end %>
 <div align="center">
 	<%= will_paginate %>
