Add admin user functionality

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,7 +68,7 @@ body {
 .article-actions {
   border-top: $border-top-default;
   padding-top: 5px;
-  text-align:right;
+  text-align:left;
 }
 
 .description {
