--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,6 +24,19 @@
             </ul>
           </li>
         <% end %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "All Categories", categories_path %> </li>
+            <% Category.all.each do |category| %>
+              <li><%= link_to "#{category.name}", category_path(category) %></li>
+            <% end %>
+            <% if logged_in? and current_user.admin? %>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "Create New Category", new_category_path %></li>
+            <% end %>
+          </ul>
+        </li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -33,7 +46,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
-          
+
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %>'s profile <%= "Admin" if current_user.admin? %><span class="caret"></span></a>
             <ul class="dropdown-menu">
