--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,10 +28,16 @@ body {
 }
 
 .badge {
-  background-color: #CEF6F5;
+  background-color: #555;
   text-transform: uppercase;
-  letter-spacing: -1px;
+  padding:6px;
+  border-radius:3px;
+  text-align:center;
+  //letter-spacing: 1px;
   font-weight: bold;
+  a {
+    color: #fff;
+  }
 }
 
 .input_checkbox input {
